New Update Thinkcrawl index page
Update - Feature dropdown card update, Body background color set, Footer background set to nav color.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            background: #2a5298;
+            background: linear-gradient(90deg, #2a5298, #5d3fd3);
             color: white;
             text-align: center;
             padding: 10px 0;
@@ -68,11 +68,11 @@
         }
         /* Dropdown Card Styles */
         .dropdown-menu {
-            background: MistyRose;
+            background: #C453B1;
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
             padding: 1.5rem;
-            width: 600px;
+            width: 1200px;
             max-width: 800px; /* Adjust for desktop */
             transform: translateX(-20%); /* Center dropdown */
             z-index: 1000;
@@ -179,7 +179,7 @@
                 font-size: 1.8rem;
             }
             .dropdown-menu {
-                width: 95%;
+                width: 350%;
             }
         }
         @media (min-width: 1025px) {
@@ -226,7 +226,7 @@
     </style>
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-white-100">
     <div class="content">
         <!-- Navbar -->
         <nav class="bg-white shadow p-4">
@@ -335,7 +335,7 @@
 
     <!-- Footer -->
     <footer class="bg-blue-600 text-white p-4 text-center">
-        <p class="text-lg"><strong>Copyright @ThinkCrawl 2025</strong></p>
+        <p class="text-lg">&copy; ThinkCrawl 2025</p>
     </footer>
 
     <script>
